--- a/qingchuanghui2.0.7 2/qch/MainVC/Pioneer/Cell/DynamicTWCell5.xib
+++ b/qingchuanghui2.0.7 2/qch/MainVC/Pioneer/Cell/DynamicTWCell5.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -15,15 +15,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u75-zs-Nez">
-                        <rect key="frame" x="35" y="5" width="285" height="65"/>
+                        <rect key="frame" x="35" y="5" width="300" height="65"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技术" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eg5-IV-hBy">
-                                <rect key="frame" x="55" y="46" width="225" height="15"/>
+                                <rect key="frame" x="55" y="46" width="240" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="Ni6-cw-OGI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="合伙人" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXb-cM-zkl">
@@ -37,16 +36,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="软件工程师 " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XnL-33-heb">
-                                <rect key="frame" x="55" y="26" width="225" height="15"/>
+                                <rect key="frame" x="55" y="26" width="240" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="lU6-95-6gx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.43137254901960786" green="0.59215686274509804" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="XnL-33-heb" secondAttribute="trailing" constant="5" id="10W-Eb-U5l"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="4Ef-Zg-ncN"/>
@@ -67,7 +65,6 @@
                             <constraint firstAttribute="height" constant="16" id="bCQ-t1-iQw"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RhV-bO-uBx">
@@ -93,7 +90,7 @@
                     <constraint firstItem="oqv-7H-UGY" firstAttribute="top" secondItem="u75-zs-Nez" secondAttribute="bottom" constant="5" id="T2I-qf-cAz"/>
                     <constraint firstItem="RhV-bO-uBx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Uzf-yV-h3J"/>
                     <constraint firstItem="RhV-bO-uBx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="X2T-9d-i3w"/>
-                    <constraint firstAttribute="trailing" secondItem="u75-zs-Nez" secondAttribute="trailing" id="cgY-bZ-g6K"/>
+                    <constraint firstAttribute="trailing" secondItem="u75-zs-Nez" secondAttribute="trailing" constant="-15" id="cgY-bZ-g6K"/>
                     <constraint firstItem="XnL-33-heb" firstAttribute="top" secondItem="IuY-cf-9a8" secondAttribute="bottom" constant="5" id="iQV-u8-PqU"/>
                     <constraint firstItem="oqv-7H-UGY" firstAttribute="leading" secondItem="u75-zs-Nez" secondAttribute="leading" constant="5" id="r7C-s6-Oo0"/>
                     <constraint firstItem="KXb-cM-zkl" firstAttribute="leading" secondItem="IuY-cf-9a8" secondAttribute="trailing" constant="6" id="siG-hT-dd0"/>
